azure/Ingress/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: myapp-service
spec: 
  type: LoadBalancer
  ports:
  - port: 80
  selector: 
    app: myapp
    type: front-end
